Home page, creating Student, Campus, & Lectures`s

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*, html, body {
+  font-family: 'Inter', sans-serif;
+}
+
+.code-font {
+  font-family: 'Fira Code', monospace;
+}
